--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -10,3 +10,4 @@ path = "src/lib.rs"
 
 [dependencies]
 sea-schema = { version = "^0.7.0", default-features = false, features = [ "migration", "debug-print" ] }
+entity = { path = "../entity" }
