--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 env_logger = "0.9.0"
 log = "0.4.14"
+urlencoding = "2.1.0"
+reqwest = { version = "0.11"}
 entity = { path = "entity" }
 migration = { path = "migration" }
