--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ axum = { version = "0.5", features = ["tower-log"] }
 sea-orm = "0.7"
 tower = "0.4.11"
 tower-http = { version = "0.2", features = ["fs"] }
-tower-cookies = { version = "0.4" }
 anyhow = "1"
 dotenv = "0.15"
 serde = { version = "1", features = ["derive"] }
@@ -22,6 +21,7 @@ serde_json = "1"
 env_logger = "0.9.0"
 log = "0.4.14"
 urlencoding = "2.1.0"
+chrono = "0.4"
 reqwest = { version = "0.11"}
 entity = { path = "entity" }
 migration = { path = "migration" }
