feature: openapi3 documentation and swagger-ui

--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
+utoipa = "1.0.2"
 
 [dependencies.sea-orm]
 # path = "../../../" # remove this line in your own project
