--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,8 @@ log = "0.4.14"
 urlencoding = "2.1.0"
 chrono = "0.4"
 reqwest = { version = "0.11"}
+utoipa = "1.0.2"
+utoipa-swagger-ui = "1.0.0"
+hyper = "0.14.18"
 entity = { path = "entity" }
 migration = { path = "migration" }
